# PINI

./: .gitignore  README.md  README_PIN.md  SensorFusionManager.txt  catkin_pkg  odom_poses.ply  odom_poses_tum.txt  ohm.md  pin_slam.py  pin_slam_ros.py  slam_poses.ply  test.txt  time_table.npy
config/lidar_slam/: run.yaml  run_fast.yaml  run_hilti_2023.yaml  run_kitti.yaml  run_m2dgr.yaml  run_newer_college.yaml  run_newer_college64.yaml  run_ntu_viral.yaml  run_oxford_spires.yaml  run_urbanNav.yaml
dataset/: slam_dataset.py
dataset/dataloaders/: rosbag_ohm.py  rosbag_with_imu.py
dependencies/: CMakeLists.txt  pyproject.toml
dependencies/lio_ekf_pybind/: CMakeLists.txt  lio_ekf_pybind.cpp
dependencies/lio_ekf_pybind/LIO_EKF/: CMakeLists.txt
dependencies/lio_ekf_pybind/LIO_EKF/src/: imuPropagation.cpp  imuPropagation.hpp  lio_ekf.cpp  lio_ekf.hpp  lio_types.hpp  unscendent_transform.hpp
dependencies_bk/: CMakeLists.txt
dependencies_bk/lio_ekf_pybind/: lio_ekf_pybind.cpp
eval/: eval_kitti.ipynb
model/: neural_points.py
ohm/: compare_paths.ipynb  header.txt  imu_init-Copy1.ipynb  imu_init.ipynb
ohm/debug/NTU/: eee_01_drift.ipynb  eee_01_ground.ipynb  eee_02.ipynb  eee_03.ipynb  nya_01.ipynb  (+28 more)
ohm/init_static_alignment/: m2dgr_imu_data.ipynb  rtp_01.ipynb
ohm/old/: compare_paths.ipynb  coor_sys.ipynb
ohm/plot_path/: path.ipynb  path_m2dgr_street3.ipynb  path_urbanNav.ipynb
utils/: EKF_ohm.py  config.py  ekf.py  imu_lib.py  lio_para.py  mapper.py  mesher.py  pgo.py  point_cloud2.py  sensor_fusion_manager.py  tools.py  tracker.py  visualizer.py
(+111 files in other folders)
